added data charts

--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -353,13 +353,13 @@
                 <select ng-model="selectedItem" 
                     ng-options="item as item.module for item in items"
                     ng-change="getChart(selectedItem)"></select>
+                <button id="b1">Click me</button>
             </div>
             <div class="container">
                 <div align="right">
                     <div id="chart_div" style="width: 800px; height: 400px;"> What do we have here</div>
 
                 </div>
-                <div <div id="chart_div2" style="width: 800px; height: 400px;"> What do we have here</div>>
                     
                 </div>
                 <div class="col-lg-8 col-lg-offset-2">
